# CS739_P4

./: README.md  TEAM  backup.cpp  client.cpp  client_config.json  client_operation.cpp  client_operation.h  client_state.h  common.cpp  common.h  consumer_queue.h  cosumer_queue.h  lib_crypto.cpp  lib_crypto.h  lib_primary.cpp  lib_primary.h  measurement.cpp  primary.cpp  replica-config.json  replica.cpp  replica_config.json  replica_state.h  test_crypto.cpp
backup_primary_gRPC/: backup_primary_grpc_server.h
client_replica_gRPC/: client_replica_grpc_client.cpp  client_replica_grpc_client.h  client_replica_grpc_server.cpp  client_replica_grpc_server.h
client_server_gRPC/: client_backup_grpc_server.cpp  client_backup_grpc_server.h  client_server_grpc_client.cpp  client_server_grpc_server.h
makefiles/: CMakeLists.txt  common.cmake
primary_backup_gRPC/: primary_backup_grpc_client.cpp  primary_backup_grpc_client.h  primary_backup_grpc_server.cpp  primary_backup_grpc_server.h
proto/: backup_primary.proto  client_replica.proto  client_replica_cmds.proto  client_server.proto  common.proto  primary_backup.proto  replica_replica.proto  replica_replica_cmds.proto
replica_replica_gRPC/: replica_replica_grpc_client.cpp  replica_replica_grpc_client.h  replica_replica_grpc_server.cpp  replica_replica_grpc_server.h
